[package]
name = "group-tileman-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
byteorder = "1"
anyhow = "1.0"
chrono = "0.4"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
